<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/navdrawer" android:layout_gravity="start" android:orientation="vertical" android:background="@android:color/white" android:layout_width="130.0dip" android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:paddingLeft="20.0dip" android:paddingRight="20.0dip" android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
              <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@+id/loginStateLayout" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <FrameLayout android:id="@+id/profileImageLayout" android:layout_width="60.0dip" android:layout_height="60.0dip" android:layout_marginTop="35.0dip" android:layout_marginBottom="9.0dip">
                    <ImageView android:id="@+id/profileImage" android:src="@drawable/person_image_empty" android:layout_width="60.0dip" android:layout_height="60.0dip" android:scaleType="centerCrop" />
                    <ImageView android:background="?attr/profileThumbBackground" android:layout_width="fill_parent" android:layout_height="fill_parent" />
                </FrameLayout>
                <TextView android:textSize="12.0dip" android:textColor="#ff555555" android:ellipsize="end" android:id="@+id/profileName" android:paddingBottom="13.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" android:layout_toRightOf="@id/profileImageLayout" />
                <FrameLayout android:id="@+id/drawer_item_write" android:background="?attr/drawerItemBackground" android:layout_width="fill_parent" android:layout_height="@dimen/navigation_drawer_item_height">
                    <com.grotesque.saa.common.widget.TypefacedTextView
                        android:textSize="@dimen/navigation_drawer_item_text" android:textColor="?attr/drawerItemTextColor" android:gravity="center" android:layout_gravity="center" android:background="?attr/backgroundColor" android:paddingLeft="6.0dip" android:paddingRight="6.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/drawer_item_write" />
                </FrameLayout>
                <FrameLayout android:id="@+id/drawer_item_memo" android:background="?attr/drawerItemBackground" android:layout_width="fill_parent" android:layout_height="@dimen/navigation_drawer_item_height">
                    <com.grotesque.saa.common.widget.TypefacedTextView
                        android:textSize="@dimen/navigation_drawer_item_text" android:textColor="?attr/drawerItemTextColor" android:gravity="center" android:layout_gravity="center" android:background="?attr/backgroundColor" android:paddingLeft="6.0dip" android:paddingRight="6.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/drawer_item_draft" />
                </FrameLayout>
                <RelativeLayout android:id="@+id/drawer_item_notification" android:background="?attr/drawerItemBackground" android:layout_width="fill_parent" android:layout_height="@dimen/navigation_drawer_item_height">
                    <com.grotesque.saa.common.widget.TypefacedTextView
                        android:textSize="@dimen/navigation_drawer_item_text" android:textColor="?attr/drawerItemTextColor" android:gravity="center" android:layout_gravity="center" android:id="@+id/drawer_write_text" android:background="?attr/backgroundColor" android:paddingLeft="6.0dip" android:paddingRight="6.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/drawer_item_notification" android:layout_centerInParent="true" />
                    <ImageView android:id="@+id/drawer_item_badge" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="-3.0dip" android:src="@drawable/login_ico_new_badge" android:layout_toRightOf="@id/drawer_write_text" android:layout_alignTop="@id/drawer_write_text" />
                </RelativeLayout>

                <ImageView android:paddingTop="17.0dip" android:paddingBottom="18.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="?attr/loginDivideMenu" />

                <FrameLayout android:orientation="vertical" android:id="@+id/drawer_item_board" android:background="?attr/drawerItemBackground" android:layout_width="fill_parent" android:layout_height="@dimen/navigation_drawer_item_height">
                    <com.grotesque.saa.common.widget.TypefacedTextView
                        android:textSize="@dimen/navigation_drawer_item_text" android:textColor="?attr/drawerItemTextColor" android:gravity="center" android:layout_gravity="center" android:background="?attr/backgroundColor" android:paddingLeft="6.0dip" android:paddingRight="6.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/drawer_item_board" />
                </FrameLayout>
                <FrameLayout android:id="@+id/drawer_item_rank" android:background="?attr/drawerItemBackground" android:layout_width="fill_parent" android:layout_height="@dimen/navigation_drawer_item_height">
                    <com.grotesque.saa.common.widget.TypefacedTextView
                        android:textSize="@dimen/navigation_drawer_item_text" android:textColor="?attr/drawerItemTextColor" android:gravity="center" android:layout_gravity="center" android:background="?attr/backgroundColor" android:paddingLeft="6.0dip" android:paddingRight="6.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/drawer_item_rank" />
                </FrameLayout>
                <FrameLayout android:id="@+id/drawer_item_fixture" android:background="?attr/drawerItemBackground" android:layout_width="fill_parent" android:layout_height="@dimen/navigation_drawer_item_height">
                    <com.grotesque.saa.common.widget.TypefacedTextView
                        android:textSize="@dimen/navigation_drawer_item_text" android:textColor="?attr/drawerItemTextColor" android:gravity="center" android:layout_gravity="center" android:background="?attr/backgroundColor" android:paddingLeft="6.0dip" android:paddingRight="6.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/drawer_item_schedule" />
                </FrameLayout>
              </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout android:gravity="center_horizontal" android:paddingBottom="22.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageButton android:layout_gravity="bottom" android:id="@+id/setting_button" android:background="@color/brunchTransparent" android:layout_width="32.0dip" android:layout_height="32.0dip" android:src="@drawable/login_btn_setting_normal" />
    </LinearLayout>
</LinearLayout>