<?xml version="1.0" encoding="utf-8"?>
<com.grotesque.saa.common.fragment.ActionBarFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout android:id="@+id/ll_post_layout"  android:layout_gravity="center_vertical" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
        <com.grotesque.saa.common.actionbar.BaseActionBar android:id="@+id/actionBar" android:layout_width="fill_parent" android:layout_height="wrap_content" toolbar:actionbarType="COMMON" toolbar:isBlack="true" toolbar:textColor="@color/black" toolbar:actionbarBackground="@drawable/comm_bg_home_top" toolbar:actionbarTitle="게시판" toolbar:leftIcon="@drawable/selector_comm_btn_cancel" toolbar:rightIcon="@drawable/selector_comm_btn_apply" toolbar:leftButtonDescription="@string/cd_toolbar_close" toolbar:rightButtonDescription="@string/cd_toolbar_confirm"
            xmlns:android="http://schemas.android.com/apk/res/android" xmlns:toolbar="http://schemas.android.com/apk/res-auto" />
        <LinearLayout android:layout_width="match_parent" android:layout_height="fill_parent" android:layout_weight="1" android:orientation="vertical">
             <android.support.v7.widget.RecyclerView android:id="@+id/post_list" android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <LinearLayout android:orientation="horizontal" android:id="@+id/attachment_control_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:background="@color/white">
                <ImageButton android:id="@+id/imgbtn_add_photo" android:background="@null" android:layout_width="48.0dip" android:layout_height="48.0dip" android:src="@drawable/selector_editor_btn_gallery"  />
                <ImageButton android:id="@+id/imgbtn_add_more" android:background="@null" android:layout_width="48.0dip" android:layout_height="48.0dip" android:src="@drawable/selector_editor_btn_add"  />
                <View android:background="@color/brunchTransparent" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_weight="1.0" />
                <ImageButton android:id="@+id/ib_close_all" android:background="@null" android:layout_width="48.0dip" android:layout_height="48.0dip" android:src="@drawable/point_under" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@+id/ll_search_item_layout" android:background="#fff6f6f7" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <View android:background="#ffddddde" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginBottom="10.0dip" />
                <LinearLayout android:orientation="horizontal" android:background="@drawable/background_compose_search" android:paddingLeft="12.0dip" android:paddingTop="10.0dip" android:paddingRight="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip">
                    <FrameLayout android:layout_width="wrap_content" android:layout_height="fill_parent">
                        <ImageButton android:layout_gravity="center_vertical" android:id="@+id/ib_start_search" android:background="@null" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="7.0dip" android:src="@drawable/icon_search" />
                        <ProgressBar android:layout_gravity="center" android:id="@+id/pb_load" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@android:style/Widget.ProgressBar.Small" />
                    </FrameLayout>
                    <EditText android:textSize="15.0sp" android:textColor="#ff222222" android:textColorHint="#bcbcbcbc" android:layout_gravity="center_vertical" android:id="@+id/et_search_text" android:background="@null" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/search_title_hint" android:maxLines="1" android:lines="1" android:singleLine="true" android:layout_weight="1.0" android:imeOptions="actionDone" />
                    <ImageButton android:layout_gravity="center_vertical" android:id="@+id/ib_clear_text" android:background="@null" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/comm_btn_delete_normal" />
                </LinearLayout>
                <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="41.0dip">
                    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@+id/ll_image_tab" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
                        <TextView android:textSize="14.0sp" android:textColor="@drawable/selector_search_tab" android:layout_gravity="center" android:background="@null" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="이미지" />
                    </LinearLayout>
                    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@+id/ll_video_tab" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
                        <TextView android:textSize="14.0sp" android:textColor="@drawable/selector_search_tab" android:layout_gravity="center" android:background="@null" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="유튜브" />
                    </LinearLayout>
                </LinearLayout>
                <View android:background="#ffddddde" android:layout_width="fill_parent" android:layout_height="1.0dip" />
            </LinearLayout>
          </LinearLayout>
        <FrameLayout android:visibility="gone" android:gravity="bottom" android:id="@+id/attachment_search_fragment" android:layout_width="match_parent" android:layout_height="@dimen/keyboard_height" />
    </LinearLayout>
    <include layout="@layout/dialog_progress_loading" android:id="@+id/loading_progress" android:visibility="gone" />
    <com.grotesque.saa.common.widget.NavigationView android:id="@+id/navigationView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" android:visibility="gone"/>

</com.grotesque.saa.common.fragment.ActionBarFrameLayout>